build(docker): Docker production image optimizado (T-084)
- Multi-stage Dockerfile: Maven 3.9 + Temurin 25 (build) → JRE Alpine (runtime)
- JVM flags: MaxRAMPercentage=75%, G1GC, StringDeduplication, ExitOnOutOfMemoryError
- HEALTHCHECK integrado con readiness probe Quarkus
- Usuario no-root, zona horaria Ecuador preconfigurada
- .dockerignore para contexto de build mínimo
- Documentación Docker en DEPLOYMENT.md
- Evaluación GraalVM native: no recomendado (SOAP/XAdES)